# zetta

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/analytics/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json
apps/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
data/: worldcup_wallet_per_wallet_rankings_20260613.json  worldcup_wallet_rankings_20260613.json
docs/: architecture.md  todo.md
docs/operations/: distributed-wallet-workers.md  ubuntu-server-deploy.md
docs/product/: analytics-requirements.md  analytics-ui-market-wide.html  polymarket-data-capability-cli.txt
docs/queries/: gamma.sql
infra/ansible/: inventory.example.ini  zetta-workers.yml
infra/clickhouse/: schema.sql
infra/nginx/: discovery.prophet.zone.conf  zetta.prophet.zone.conf
infra/nomad/: zetta-workers.nomad.hcl
infra/postgres/: schema.sql
scripts/: configure_wallet_helper.sh  export_worldcup_wallet_rankings.py
tests/: test_api.py  test_chain_loader.py  test_cli.py  test_clickhouse_sql.py  test_clickhouse_storage.py  test_clob_collector.py  test_clob_loader.py  test_data_collector.py  test_data_loader.py  test_event_refresh.py  test_gamma_collector.py  test_gamma_loader.py  test_http_client.py  test_incremental_loader.py  test_marts.py  test_normalize_gamma.py  test_orderbook_realtime.py  test_parallel_loader.py  test_polymarket_chain.py  test_polymarket_pages.py  test_raw_reader.py  test_raw_storage.py  test_redpanda.py  test_streams.py  test_tasks.py  test_ws_collector.py
(+76 files in other folders)
