[project]
name = "zetta"
version = "0.1.0"
description = "Distributed data platform for Polymarket market intelligence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "clickhouse-connect>=0.8.0",
  "orjson>=3.10.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "psycopg[binary]>=3.2.0",
  "websockets>=12.0",
  "zstandard>=0.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
zetta = "zetta.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

